--- a/templates/hello.html
+++ b/templates/hello.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/css/test.css" />
+    <link rel="stylesheet" href="/static/css/test.css" />
     <title>Hello Fiber!</title>
 </head>
 <body>
     <div class="container">
         <h1>Hello Fiber!</h1>
         <p>This page was returned as <span style="font-size: 32px; color: red;">HTML</span> by... </p>
-        <img src="/public/img/fiber.png" width="250" />
+        <img src="/static/img/fiber.png" width="250" />
     </div>
 
     <div class="container">
@@ -18,6 +18,6 @@
         <button onclick="makeAjaxCall()">Fire AJAX</button>
     </div>
     
-    <script src="/public/js/test.js"></script>
+    <script src="/static/js/test.js"></script>
 </body>
 </html>
